Se solucionan issues de clean code